Fix flex gap in alert

--- a/src/Alert/Alert.css
+++ b/src/Alert/Alert.css
@@ -34,7 +34,7 @@
 .dsa-alert-content {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.5rem 0.75rem;
+    gap: 0.25rem 0.75rem;
 }
 
 .dsa-alert-fullscreen .dsa-alert-content {
